# vdr-old

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  android_getline.c  android_sort.c  android_sort.h  android_strchrnul.c  android_timegm.c  audio.h  channels.c  channels.cpp  channels.h  config.cpp  cutter.cpp  diseqc.h  dvbci.h  dvbsubtitle.cpp  dvbsubtitle.h  eit.c  eit.cpp  epg.c  epg.cpp  epg.h  font.cpp  font.h  i18n.cpp  i18n.h  interface.h  keys.h  lirc.c  lirc.cpp  lirc.h  menu.cpp  menuitems.cpp  menuitems.h  nit.cpp  osd.c  osd.cpp  osd.h  (+34 more)
cmake/: FindLibdl.cmake
lib/libhts/: CMakeLists.txt
lib/libsi/: CMakeLists.txt  dish.h  headers.h  multiple_string.cpp  multiple_string.h  section.cpp  section.h  si.cpp  si.h  si_ext.h  util.cpp  util.h
lib/libsi/test/: MGT.txt  PAT.txt
lib/platform/: CMakeLists.txt  os.h
lib/shared_ptr/: shared_ptr.hpp
libsi/: Makefile  dish.c  si.c  si.cpp  si.h  util.c
platform/threads/: mutex.h
po/: ar.po  ca_ES.po  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  es_ES.po  et_EE.po  fi_FI.po  fr_FR.po  hr_HR.po  hu_HU.po  it_IT.po  lt_LT.po  mk_MK.po  nl_NL.po  nn_NO.po  pl_PL.po  pt_PT.po  ro_RO.po  ru_RU.po  sk_SK.po  sl_SI.po  sr_RS.po  sv_SE.po  tr_TR.po  uk_UA.po  zh_CN.po
system/: channels.conf  channels.xml  satellites.xml
vdr/: Config.cpp  Config.h  Makefile  Player.cpp  Player.h  SignalHandler.cpp  SignalHandler.h  Types.h  VDRDaemon.cpp  VDRDaemon.h  addon.cpp  main.cpp
vdr/channels/: Channel.cpp  Channel.h  ChannelDefinitions.h  ChannelFilter.cpp  ChannelFilter.h  ChannelGroup.cpp  ChannelGroup.h  ChannelID.cpp  ChannelID.h  ChannelManager.cpp  ChannelManager.h  ChannelSource.cpp  ChannelSource.h  ChannelTypes.h  Channels.cpp  Channels.h
vdr/devices/: CI.cpp  CI.h  Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  DeviceSubsystem.cpp  DeviceSubsystem.h  DeviceTypes.h  Makefile  PIDResource.cpp  PIDResource.h  Receiver.cpp  Receiver.h  Remux.cpp  Remux.h  TSBuffer.cpp  TSBuffer.h  Transfer.cpp  Transfer.h  TunerHandle.cpp  TunerHandle.h
vdr/dvb/: CADescriptor.cpp  CADescriptor.h  CADescriptorHandler.cpp  CADescriptorHandler.h  CADescriptors.cpp  CADescriptors.h  DVBTypes.h  DiSEqC.cpp  DiSEqC.h  EIT.cpp  EIT.h  EITScan.cpp  EITScan.h  Filter.cpp  Filter.h  NIT.cpp  NIT.h  PAT.cpp  PAT.h  PsiBuffer.cpp  PsiBuffer.h  SDT.cpp  SDT.h  SPU.h  Sections.cpp  Sections.h  extended_frontend.h
vdr/epg/: Component.cpp  Component.h  Components.cpp  Components.h  EPG.cpp  EPG.h  EPGDataReader.cpp  EPGDataReader.h  EPGDataWriter.cpp  EPGDataWriter.h  EPGDefinitions.h  EPGHandler.cpp  EPGHandler.h  EPGHandlers.cpp  EPGHandlers.h  EPGScanner.cpp  EPGScanner.h  EPGStringifier.cpp  EPGStringifier.h  EPGTypes.h  Event.cpp  Event.h  Schedule.cpp  Schedule.h  ScheduleManager.cpp  ScheduleManager.h  Schedules.cpp  Schedules.h
vdr/filesystem/: Directory.cpp  Directory.h  DirectoryFetchJob.cpp  DirectoryFetchJob.h  File.cpp  File.h  Filesystem.cpp  Filesystem.h  HDFile.cpp  HDFile.h  IDirectory.cpp  IDirectory.h  IFile.h  LockFile.cpp  LockFile.h  Makefile  Poller.cpp  Poller.h  ReadDir.cpp  ReadDir.h  SpecialProtocol.cpp  SpecialProtocol.h  VFSDirectory.cpp  VFSDirectory.h  VFSFile.cpp  VFSFile.h  VideoFile.cpp  VideoFile.h  Videodir.cpp  Videodir.h
vdr/recordings/: IndexFile.cpp  IndexFileGenerator.cpp  IndexFileGenerator.h  Mark.cpp  Mark.h  Marks.cpp  Recorder.cpp  Recorder.h  Recording.cpp  Recording.h  RecordingConfig.h  RecordingCutter.cpp  RecordingCutter.h  RecordingDefinitions.h  RecordingInfo.cpp  RecordingInfo.h  RecordingManager.cpp  RecordingManager.h  RecordingTypes.h  RecordingUserCommand.cpp  RecordingUserCommand.h  Recordings.cpp  Recordings.h  ResumeFile.cpp  Timers.cpp  Timers.h
vdr/scan/: CNICodes.cpp  CNICodes.h  CountryUtils.cpp  CountryUtils.h  FrontendCapabilities.cpp  FrontendCapabilities.h  SWReceiver.cpp  SWReceiver.h  SatelliteUtils.cpp  SatelliteUtils.h  ScanConfig.cpp  ScanConfig.h  ScanFSM.cpp  ScanFSM.h  ScanLimits.cpp  ScanLimits.h  ScanTask.cpp  ScanTask.h  Scanner.cpp  Scanner.h  common.cpp  common.h  countries.cpp  countries.h  dvb_wrapper.cpp  dvb_wrapper.h  ext_math.cpp  ext_math.h  frequencies.cpp  frequencies.h  satellites.cpp  scan.h  scanfilter.cpp  scanfilter.h  scanner.cpp  scanner.h  statemachine.cpp  statemachine.h  ttext.cpp  ttext.h  (+2 more)
vdr/settings/: AllowedHosts.cpp  AllowedHosts.h  Makefile  Settings.cpp  Settings.h  SettingsDefinitions.h
vdr/sources/: ISourceParams.cpp  ISourceParams.h  Makefile  Source.cpp  Source.h
vdr/test/: Makefile  TestVDRDaemon.cpp
vdr/threads/: SystemClock.cpp  SystemClock.h
vdr/timers/: Timer.cpp  Timer.h  TimerDefinitions.h  TimerManager.cpp  TimerManager.h  TimerTime.cpp  TimerTime.h  TimerTypes.h  Timers.cpp  Timers.h
vdr/transponders/: CountryUtils.cpp  CountryUtils.h  SatelliteUtils.cpp  Stringifier.cpp  Stringifier.h  Transponder.cpp  Transponder.h  TransponderDefinitions.h  TransponderFactory.cpp  TransponderFactory.h  TransponderParams.cpp  TransponderParams.h  TransponderTypes.h  dvb_wrapper.cpp  dvb_wrapper.h
vdr/utils/: Base64.cpp  Base64.h  CRC32.cpp  CRC32.h  CalendarUtils.cpp  CalendarUtils.h  CharSetConverter.cpp  CharSetConverterVDR.cpp  CharSetConverterVDR.h  CharsetConverter.cpp  CharsetConverter.h  CharsetDetection.cpp  CharsetDetection.h  CommonIncludes.h  CommonMacros.h  DateTime.cpp  DateTime.h  FSM.h  Hash.cpp  Hash.h  I18N.cpp  I18N.h  IntervalTree.h  List.cpp  List.h  Makefile  Observer.cpp  Observer.h  RegExp.cpp  RegExp.h  Ringbuffer.cpp  Ringbuffer.h  Shutdown.cpp  Shutdown.h  Status.cpp  Status.h  StringUtils.cpp  StringUtils.h  SynchronousAbort.cpp  SynchronousAbort.h  (+21 more)
vdr/vnsi/: ChannelFilter.cpp  ChannelFilter.h  Client.cpp  Client.h  RecordingsCache.cpp  RecordingsCache.h  RequestPacket.cpp  ResponsePacket.cpp  Server.cpp  Server.h  ServerConfig.cpp  ServerConfig.h  Setup.cpp  Setup.h  VNSIClient.cpp  VNSIClient.h  (+5 more)
xbmc/: addon.xml.in  create_addon.sh  libXBMC_addon.h  libXBMC_content.h  libXBMC_gui.h  xbmc_content_types.h  xbmc_file_utils.hpp  xbmc_service_dll.h  xbmc_service_types.h  xbmc_vfs_utils.hpp
(+273 files in other folders)
